--- a/src/ts/components/iconset/iconset.component.scss
+++ b/src/ts/components/iconset/iconset.component.scss
@@ -1,5 +1,10 @@
-.iconset {
+rv-iconset {
   display: inline-flex;
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
 
   // black
   &.color-black {
