--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -5,16 +5,9 @@
          
         <ul class="nav" style="pointer-events: all;">
           <li class="nav-item">
-            <a class="nav-link" href="#">DE</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">EN</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">I</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">F</a>
+            <div class="nav-text">
+              Welcome to the online home of covering trends, fashion inspiration and heigh end ready to wear pieces.
+            </div>
           </li>
         </ul>
       </div>
@@ -22,11 +15,8 @@
   </div>
   <div class="row mainbar">
     <div class="col-auto d-flex align-items-center">
-      <a href="/" class="brand-mix" style="pointer-events: all;">
-        <div class="font-weight-bold brand-text">Art</div>
-        <img class="brand-image" src="{{ 'icon_heart_px.png' | asset_url }}" alt="{{ shop.name | strip_html }}">
-        <div class="font-weight-bold brand-text">Code</div>
-        <div class="font-weight-normal brand-text hidden-xs-down">&nbsp;Studio</div>
+      <a href="/" class="brand" style="pointer-events: all;">
+        <rv-iconset rv-src="'{{ 'logo.svg' | asset_url }}'" name="'logo.svg'" size="64"></rv-iconset>
       </a>
     </div>
     <div class="ml-auto col-auto d-flex align-items-center">
@@ -34,7 +24,7 @@
         <li class="nav-item">
           <a class="nav-link" rv-slideout-toggler="right" href="#">
             <span class="text">Info</span>
-            <iconset src="'{{ 'iconset_icon_dots.svg' | asset_url }}'" name="'iconset_icon_dots.svg'"></iconset>
+            <rv-iconset rv-src="'{{ 'iconset_icon_dots.svg' | asset_url }}'"></rv-iconset>
           </a>
         </li>
       </ul>
